fixed the overflow in the admin dashboard

--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ header[role="banner"] ul {
 
 header[role="banner"] ul li {
   display: inline;
-  margin-right: 30px;
+  margin-right: 20px;
 }
 
 header[role="banner"] ul li a img {
